2012-04-02  Narasimha Sharoff  <nsharoff@us.ibm.com>

        * indCIMXMLHandler.c:
        [ 3485438 ] Segfault while retrying to deliver an indication

        * sfcBroker.c:
        [ 3462309 ] Do not allow multiple instances of sfcb

        * cimXmlParser.c:
        [ 3486814 ] sfcb crashes while freeing the cimxml response

2012-04-02 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c:
	[ 3505407 ] Client openlog changes settings

2012-04-02  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* interopProvider.c:
	[ 3485830 ] SFCB Makes Redundant ActivateFilter Calls

2012-03-29  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c:
	[ 3416054 ] Provider continues despite SIGSEGV
	(patch by Klaus Kampf)

	* httpAdapter.c:
	[ 3441028 ] sblim-sfcb fails on large https requests
	(patch by Klaus Kampf)

	* test/TestProviders/cmpiTestIndicationProvider.c:
	[ 3487419 ] TestIndication Provider Does Not Enable Correctly

	* providerDrv.c:
	[ 3408288 ] Safer Signal Handlers

	* interopProvider.c, providerDrv.c, control.c, sfcb.cfg.pre.in:
	[ 3512575 ] Add indication delivery thread limit and timeout

2012-03-28  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlOps.y:
	[ 3510456 ] GetProperty calls not passing keys to providers
	(patch by Zane Bitter)

	* cimRequest.c:
	[ 3510458 ] Malformed XML response to GetProperty
	(patch by Zane Bitter)

2012-03-16 Dave Heller <hellerda@us.ibm.com>

	* control.c, indCIMXMLExport.c, sfcb.cfg.pre.in:
	[ 3506453 ] Support peer cert verification for SSL indications

2012-03-15  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* brokerUpc.c:
	[ 3504607 ] CMPIRole Support in brokerUpc

2012-03-14  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* brokerUpc.c, cimRequest.c, cimRequest.h, cimXmlOps.y,
	  cimcClientSfcbLocal.c, httpAdapter.c, providerDrv.c,
	  providerMgr.c, providerMgr.h, sfcBasicPAMAuthentication.c
	[ 3367363 ] Add CMPIRole Support
