@@ -120,6 +120,12 @@ else
     ACCOUNT_PASSTHRU_LIBS = 
 endif
 
+if SLP
+    PROFILE_PROVIDER_LIBS = libsfcProfileProvider.la
+else
+    PROFILE_PROVDIER_LIBS = 
+endif
+
 sfcb_sharedobjects = \
    $(sfcblibdir)/*.so
 
@@ -129,7 +135,7 @@ sfcblib_LTLIBRARIES = \
    libsfcInternalProvider.la \
    libsfcInteropProvider.la \
    libsfcInteropServerProvider.la \
-   libsfcProfileProvider.la \
+   $(PROFILE_PROVIDER_LIBS) \
    libsfcElementCapabilitiesProvider.la \
    libsfcClassProvider.la \
    libsfcClassProviderGz.la \
@@ -157,13 +163,11 @@ sfcblib_LTLIBRARIES += \
    libTestIndicationProvider.la
 endif
 
-SLP_PROGRAMFILES = 
-
 sbin_PROGRAMS = \
    sfcbd 
 
 bin_PROGRAMS = \
-   sfcbmofpp sfcbdump sfcbinst2mof $(SLP_PROGRAMFILES)
+   sfcbmofpp sfcbdump sfcbinst2mof
 
 noinst_PROGRAMS = \
    sfcbdumpP32onI32 classSchema2c sfcbsem
@@ -284,9 +288,7 @@ libsfcIndCIMXMLHandler_la_LIBADD=-lsfcBrokerCore -lsfcInternalProvider $(CIMXMLC
 libsfcIndCIMXMLHandler_la_DEPENDENCIES=libsfcBrokerCore.la libsfcInternalProvider.la \
 	$(CIMXMLCODEC_LIBS) $(HTTP_ADAPTER_LIBS)
 
-libsfcProfileProvider_la_SOURCES = \
-   profileProvider.c \
-   $(SLP_SRC)
+libsfcProfileProvider_la_SOURCES =  $(SLP_SRC)
 libsfcProfileProvider_la_LIBADD=-lsfcBrokerCore 
 libsfcProfileProvider_la_DEPENDENCIES=libsfcBrokerCore.la 
 
@@ -377,7 +379,8 @@ libsfcCimXmlCodec_la_DEPENDENCIES=libsfcBrokerCore.la
 endif
 
 if SLP
-SLP_SRC = cimslpCMPI.c \
+SLP_SRC = profileProvider.c \
+          cimslpCMPI.c \
           cimslpSLP.c \
           cimslpUtil.c
 SLP_INC = cimslpCMPI.h \
@@ -385,6 +388,7 @@ SLP_INC = cimslpCMPI.h \
           cimslpUtil.h
 
 else
+SLP_SRC =
 SLP_INC =
 endif
 
