@@ -175,7 +175,11 @@ fi
 
 if test "$enable_slp" == "yes"; then
    AC_DEFINE(HAVE_SLP,,[SLP support enabled.])
+   LOAD_PROFILE_PROVIDER=
+else
+   LOAD_PROFILE_PROVIDER='#'
 fi
+AC_SUBST(LOAD_PROFILE_PROVIDER)
 
 if test "$enable_slp_hostname_lib" == "yes"; then
    AC_DEFINE(SLP_HOSTNAME_LIB,,[SLP Hostname lib enabled])
