@@ -131,6 +131,7 @@ Bugs Fixed:
 - 3416054 Provider continues despite SIGSEGV
 - 3505407 Client openlog changes settings
 - 3485830 SFCB Makes Redundant ActivateFilter Calls
+- 3483294 InternalProvider Should Handle SFCB_RegisteredProfile
 
 Changes in 1.3.13
 =================
